small styling change to fix odd spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ canvas{
   vertical-align: bottom;
 }
 
+#content {
+    
+}
+
 #links {
       color: #2C7086;
 
@@ -76,7 +80,6 @@ canvas{
     font-size: 26px;
     font-family: 'Raleway', sans-serif;
     font-weight: 100;
-    padding-bottom: 10px;
 }
 
 /* Wrapper */
